--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
   			 <div class="container text-center">
   			 	<h3>Meet the founder!</h3>
   			 	<hr>
-  			 <img src="img/founder.jpg" class="img-fluid rounded-circle mb-2" style="width:230px;height:250px;object-fit:cover;"> 
+  			 <img src="img/founder.png" class="img-fluid rounded-circle mb-2" style="width:230px;height:250px;object-fit:cover;"> 
   			 <h4>Raghavendra</h4>
   			 <small>Founder of NextDoor</small><br>
   			 <big><img src="img/gmail.svg" width="25" width="25" class="img-1"></big><br>
