--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 
 		    		 	<tr>
 		    		 		<td class="font-weight-bold"><img src="img/maps.svg" style="width:30px;height:30px"></td>
-		    		 		<td>NextDoor packers&movers yelachenahalli,Bangalore Karnataka.</td>
+		    		 		<td><a href="https://www.google.co.in/maps/place/Yelachenahalli,+Bengaluru,+Karnataka+560078/@12.900428,77.5661276,16z/data=!3m1!4b1!4m5!3m4!1s0x3bae3ffcaf1d5637:0xfe7515248165e4f5!8m2!3d12.9004352!4d77.5712222" target="_blank">NextDoor packers&movers yelachenahalli,Bangalore Karnataka.</a></td>
 		    		 	</tr>
 		    		
 		    		</table>
