--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="0thP423YeKB-A_jig0kct8qZ-881ZLEpY6bJ__opLHI"/>
+    <meta name="keywords" content="Packers and movers,NextDoor,nextdoor packers,bangalore,karnataka,nextdoorpackersandmovers,nextdoorpackersandmovers-bangalore,nextdoor movers,nextdoor packers,nextdoor bangalore,best packers and movers banglore,nextdoor on google serch engine,nextdoor google"/>
+	
+	
+	
+	
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
