--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="0thP423YeKB-A_jig0kct8qZ-881ZLEpY6bJ__opLHI"/>
     <meta name="keywords" content="Packers and movers,NextDoor,nextdoor packers,bangalore,karnataka,nextdoorpackersandmovers,nextdoorpackersandmovers-bangalore,nextdoor movers,nextdoor packers,nextdoor bangalore,best packers and movers banglore,nextdoor on google serch engine,nextdoor google,nextdoor packers and movers bangalore"/>
-	
+    <meta name="author" content="NextDoor packers and movers Bangalore">
 	
 	
 	
