--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="0thP423YeKB-A_jig0kct8qZ-881ZLEpY6bJ__opLHI"/>
     <meta name="keywords" content="Packers and movers,NextDoor,nextdoor packers,bangalore,karnataka,nextdoorpackersandmovers,nextdoorpackersandmovers-bangalore,nextdoor movers,nextdoor packers,nextdoor bangalore,best packers and movers banglore,nextdoor on google serch engine,nextdoor google,nextdoor packers and movers bangalore,nextdoor packers and movers bangalore, nextdoor movers and packers bangalore,nextdoor packers movers bangalore,nextdoor packers and movers in bangalore, nextdoor movers packers bangalore, packers movers bangalore nextdoor,nextdoor bangalore packers and movers"/>
     <meta name="author" content="NextDoor packers and movers Bangalore"/>
-	
+    <meta name="description" content="NextDoor is a packers and movers agency in Bangalore.It provides lot of services for the client.It is mainly based on packers and movers community.NextDoor is new startup in Bangalore.NextDoor packers and movers Bangalore can provide lot of services like house shifting, business shifting,office shifting and commercial shifting..etc it provides more than enough.Ok then for more info lets explore our website...If like it call us:-+91-9483903143,+91-9071855089.Give us feedback:- nextdoorpackersandmovers@gmail.com"/>
 	
 	
     <link rel="stylesheet" href="css/bootstrap.min.css">
