--- a/index.html
+++ b/index.html
@@ -598,6 +598,7 @@
     <div class="container">
         <h4>NextDoor &copy; copyright, 2019.All rights reserved.</h4>
         <a href="index.html" class="btn btn-outline-light mt-1">Go to top</a><br>
+	<p>Designed by <a href="https://astute.ga" target="_blank">Astute Software Solutions </a></p>
      </div>
 </section>
 
