--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <!-- BRAND INFO -->
 
-<header style="background-image: linear-gradient(to right bottom, #ed5200, #ee6501, #ef7608, #f08514, #f19421, #cf981b, #af9823, #929531, #5a7e3e, #346345, #27463e, #272929);min-height:550px;" id="brand-info">
+<header style="background-image: linear-gradient(to bottom, #ed9b00, #e79809, #e19410, #dc9116, #d68e1a, #b68b16, #98861b, #7d7f23, #4d6e33, #2e583d, #24413a, #272929);min-height:550px;" id="brand-info">
     <div class="container text-center" style="padding-top:100px;">
 
 
