--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <!-- BRAND INFO -->
 
-<header style="background-image: linear-gradient(to bottom, #ed9b00, #e79809, #e19410, #dc9116, #d68e1a, #b68b16, #98861b, #7d7f23, #4d6e33, #2e583d, #24413a, #272929);min-height:550px;" id="brand-info">
+<header style="background-image: linear-gradient(to left top, #ed9b00, #ee9a00, #ee9801, #ef9701, #ef9502, #f09901, #f09e00, #f1a200, #f1ad00, #f0b800, #efc300, #edce00);min-height:550px;" id="brand-info">
     <div class="container text-center" style="padding-top:100px;">
 
 
