--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
 <!-- BRAND INFO -->
 
-<header style="background-image: linear-gradient(to left top, #ed9b00, #ee9a00, #ee9801, #ef9701, #ef9502, #f09901, #f09e00, #f1a200, #f1ad00, #f0b800, #efc300, #edce00);min-height:550px;" id="brand-info">
+<header style="background-color #ff4e00;
+background-image linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);min-height:550px;" id="brand-info">
     <div class="container text-center" style="padding-top:100px;">
 
 
