--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 
 <!-- BRAND INFO -->
 
-<header style="background-color #ff4e00;
-background-image linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);min-height:550px;" id="brand-info">
+<header style="background-image linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);min-height:550px;" id="brand-info">
     <div class="container text-center" style="padding-top:100px;">
 
 
