--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <!-- BRAND INFO -->
 
-<header style="background-image: linear-gradient(to right top, #e5ac0c, #ebae0a, #f2b008, #f8b107, #ffb306);min-height:550px;" id="brand-info">
+<header style="background-color: red;min-height:550px;" id="brand-info">
     <div class="container text-center" style="padding-top:100px;">
 
 
