--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <!-- BRAND INFO -->
 
-<header style="background-color: red;min-height:550px;" id="brand-info">
+<header style="background-color:#FF4500;min-height:550px;" id="brand-info">
     <div class="container text-center" style="padding-top:100px;">
 
 
