--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <!-- BRAND INFO -->
 
-<header style="background-color:#FF4500;min-height:550px;" id="brand-info">
+<header style="background-image: linear-gradient(to bottom, #dcdad7, #e2cdb1, #e9c08c, #efb168, #f6a044, #f99b34, #fc9621, #ff9100, #ff9900, #ffa200, #ffaa00, #ffb200);min-height:550px;" id="brand-info">
     <div class="container text-center" style="padding-top:100px;">
 
 
