--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
     <div class="container">
         <h4>NextDoor &copy; copyright, 2019.All rights reserved.</h4>
         <a href="index.html" class="btn btn-outline-light mt-1">Go to top</a><br>
-	<p class="mt-2">Designed by <a href="https://astute.ga" target="_blank">Astute Software Solutions </a></p>
+	<p class="mt-2">Designed by <a href="https://astute.ga" target="_blank">Astute Software Solutions,Anantapur</a></p>
      </div>
 </section>
 
