--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
+    <link rel="icon" type="image/png" href="img/nextdoor_logo.png" sizes="192x192"/>
 
 
 </head>
