--- a/nextdoor-estimated-prices.html
+++ b/nextdoor-estimated-prices.html
@@ -3,6 +3,7 @@
 <head>
   <title>NextDoor| Details</title>
     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="keywords" content="packers and movers price, nextdoor packers and movers prices,nextdoor packers prices,bangalore packers and movers prices,packers and movers estimated prices,nextdoor packers estimated prices,best packers and movers bangalore,best packers bangalore,best movers bangalore,india packers and movers, packers and movers price list, packers and movers estimated prices,prices packers and movers bangalore nextdoor,Next Door packers and movers bangalore,bangalore packers and movers"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
