--- a/nextdoor-estimated-prices.html
+++ b/nextdoor-estimated-prices.html
@@ -25,7 +25,7 @@
  
 
  
-    <ul class="navbar-nav mr-auto text-light m-1">
+    <ul class="navbar-nav ml-auto text-light m-1">
        <li class="nav-item active">
         <a class="nav-link btn btn-outline-danger p-1" href="index.html">Back to Website</a>
       </li>
