--- a/nextdoor-estimated-prices.html
+++ b/nextdoor-estimated-prices.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg  navbar-dark bg-dark sticky-top">
   <div class="container">
-  <a class="navbar-brand" href="#">NextDoor</a>
+  <a class="navbar-brand" href="index.html">NextDoor</a>
  
 
  
