--- a/nextdoor-estimated-prices.html
+++ b/nextdoor-estimated-prices.html
@@ -16,6 +16,15 @@
       }
 
     </style>
+    <div itemscope itemtype=”http://schema.org/Product”>
+    <img itemprop=”image” src=”image-link.jpg” alt=”Product Name“/>
+    <span itemprop=”name”>Product Name</span>
+    <div itemprop=”aggregateRating itemscope itemtype=”http://schema.org/AggregateRating”>
+    <span itemprop=”ratingValue”>4.5</span>
+    out of <span itemprop=”bestRating”>5</span>
+    based on <span itemprop=”ratingCount”>301</span> user ratings.
+    </div>
+    
 </head>
 <body>
 
