--- a/index.html
+++ b/index.html
@@ -601,9 +601,9 @@
      </div>
 </section>
 
-<section class="fixed-bottom text-light mt-2">
+<!--<section class="fixed-bottom text-light mt-2">
 	<a href="nextdoor-estimated-prices.html" class="btn btn-success btn-block btn-lg">&#8377; Get estimated prices</a>
-</section>
+</section>-->
 
 
 <script src="js/jquery.min.js"></script>
