--- a/index.html
+++ b/index.html
@@ -600,6 +600,10 @@
 	<p class="mt-2">Designed by <a href="https://astute.ga" target="_blank">Astute Software Solutions,Anantapur</a></p>
      </div>
 </section>
+	
+	<!-- Start of WebFreeCounter Code -->
+<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=geekxfno&nd=6&style=1" border="0" alt="visitor counter"></a>
+<!-- End of WebFreeCounter Code -->
 
 <!--<section class="fixed-bottom text-light mt-2">
 	<a href="nextdoor-estimated-prices.html" class="btn btn-success btn-block btn-lg">&#8377; Get estimated prices</a>
