--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 </section>
 	
 	<!-- Start of WebFreeCounter Code -->
-<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=geekxfno&nd=6&style=1" border="0" alt="visitor counter"></a>
+<a  target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=geekxfno&nd=6&style=1" border="0" alt="visitor counter"></a>
 <!-- End of WebFreeCounter Code -->
 
 <!--<section class="fixed-bottom text-light mt-2">
